blacklist/templates/app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blacklist-app
  labels:
    key: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: blacklist-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blacklist-pod
    spec:
      containers:
        - name: app-c
          image: "172.31.15.33:5000/blacklist:v5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: springdb
              mountPath: /usr/local/tomcat/webapps/BlackList_saas/WEB-INF/classes/spring-db.xml
              subPath: spring-db.xml
            - name: esconfig
              mountPath: /usr/local/tomcat/webapps/BlackList_saas/WEB-INF/classes/my.properties
              subPath: my.properties
            - name: logsdb
              mountPath: '/usr/local/tomcat/logs'

      
      volumes:
        - name: springdb
          configMap:
            name: env-config
            items:
              - key: springdb
                path: spring-db.xml
        - name: esconfig
          configMap:
            name: es-config
            items:
              - key: esconfig
                path: my.properties
        - name: logsdb
          persistentVolumeClaim:
            claimName: logs-claim
